service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-java-app
spec:
  selector:
    app: my-java-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
