kavyaingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-java-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: my-java-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-java-app
            port:
              number: 8080
